# org-context-graph

./: README.md  pyproject.toml
data/: service-catalog.json
examples/: demo-service-catalog.json  demo-service-catalog.yaml
src/org_context_graph/: catalog_loader.py  main.py  models.py  service_catalog.py  storage.py
tests/: test_api.py  test_catalog_loader.py  test_service_catalog.py  test_storage.py
