[project]
name = "org-context-graph"
version = "0.1.0"
description = "Organization context graph for services, repos, runbooks, incidents, and retrieval."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
